Rollforward of https://github.com/google/error-prone/commit/3272246036db6fc15cb32dddb3b263710373b1be: Use `getLast`/`getFirst` now that EP is on 21 (or will be after unknown commit)
I TGPed like a coward this time: test/826482634/OCL:826482634:BASE:827875680:1762252819230:147eaa23/targets

RELNOTES=no
PiperOrigin-RevId: 828449330