@@ -96,6 +96,9 @@ public class ProtectedMembersInFinalClass extends BugChecker implements ClassTre
                           : symbol.name.toString();
                     })
                 .collect(joining(", ")));
-    return buildDescription(relevantMembers.get(0)).setMessage(message).addFix(fix.build()).build();
+    return buildDescription(relevantMembers.getFirst())
+        .setMessage(message)
+        .addFix(fix.build())
+        .build();
   }
 }
